# recipemuster

./: .gitattributes  .gitignore  .mcp.json  CLAUDE.md  MBS.STATION-reference.sh  NUL  RBS.STATION-reference.sh  README.md  RELEASE.md  _test_notch_del_alpha.txt  _test_notch_del_bravo.txt  _test_notch_del_charlie.txt  bdrv_Variables.sh  bdu.variables.sh  bgc-config.mk  bhyslop-nopasswd  brm-console.mk  cloudbuild-test-provenance.json  gad-GADMWM-MemoWickedMisunderstand.md  index.html  mbds-variables.shmk  mbdv-variables.shmk  mbv.variables.sh  mrm-console.mk  project-xml-top.txt  rbb.base.mk  rbc-console.mk  rbc.console.mk  rbm-config.yml  rbp-procedures.md  rbrp.env  rbrr.env  rbrr.repo.mk  rbrr.repo.sh  rbrr_RecipeBottleRegimeRepo.sh  rbv.variables.mk  rmc-console.mk  temp.txt  vwp-policy.md  wsl@rocket
.buk/: buk_launch_ccbx.sh  buk_launch_ccck.sh  buk_launch_rbw.sh  burc.env  launcher.buw_workbench.sh  launcher.cccw_workbench.sh  launcher.cmw_workbench.sh  launcher.jjt_testbench.sh  launcher.jjw_workbench.sh  launcher.rbk_Coordinator.sh  launcher.rbt_testbench.sh  launcher.rbtb_testbench.sh  launcher.rbtg_testbench.sh  launcher.rbw_workbench.sh  launcher.vow_workbench.sh  launcher.vslw_workbench.sh  launcher_common.sh  launcher_nolog.rbw_workbench.sh  rbbc_constants.sh
.claude/: settings.json
.jjk/: .gitignore
.rbg-temp-16736187191-1/: rbgr_all_versions.json
.rbg-temp-16751832850-1/: rbgr_all_versions.json
.rbg-temp-16751983325-1/: rbgr_all_versions.json
.rbk/: pluml.rbrn.env  rbob_compose.yml  rbrd.env  rbrg.env  rbrm.env  rbrn_nsproto.env  rbrn_pluml.env  rbrn_srjcl.env  rbrn_tadmor.env  rbrr.env  srjcl.rbrn.env  tadmor.compose.yml  tadmor.rbrn.env
MBSR-concept-model/: CONCEPT_MODEL.adoc
MBSR-dockerfiles/: srjcl.rogue.dockerfile  srjcl.sentry.dockerfile  srjsv.rogue.dockerfile  srjsv.sentry.dockerfile
MBSR-environments-srjcl/: ipycl-name-genie.ipynb  netdiag.py  output.html
Study/study-model-prompt-tuning/: Cargo.toml  README.md
Study/study-model-prompt-tuning/src/: main.rs
Tools/: Makefile  (+135 more)
Tools/apck/apcd/: Cargo.toml  build.rs  tauri.conf.json
Tools/apck/apcd/container/: Dockerfile  README.md  entrypoint.py  requirements.txt
Tools/apck/apcd/container/discerners/: spacy_scan.py  stanford.py  stanza_scan.py
Tools/apck/apcd/dictionaries/: cities.txt  english_whitelist.txt  firstnames.txt  medical_whitelist.txt  surnames.txt
Tools/apck/apcd/src/: apcab_main.rs  apcad_main.rs  apcal_main.rs  apcap_main.rs  apcnsa_main.rs  apcrb_pasteboard.rs  apcrd_dictionaries.rs  apcre_engine.rs  apcrh_harvest.rs  apcrj_journal.rs  apcrl_log.rs  apcrm_match.rs  apcrp_parse.rs  apcru_update.rs  apctb_pasteboard.rs  apctd_dictionaries.rs  apcte_engine.rs  apcth_harvest.rs  apctm_match.rs  apctp_parse.rs  lib.rs
Tools/apck/apcd/ui/: app.js  index.html  style.css
Tools/rbk/vov_veiled/rbthd/: Cargo.toml  rbthe_cli.sh  rbthw_workbench.sh  rbthz_zipper.sh
Tools/rbk/vov_veiled/rbthd/src/: lib.rs  main.rs  rbthdr_cachet.rs  rbthdr_docimasy.rs  rbthdr_essai.rs  rbthdr_expede.rs  rbthdr_harbinger.rs  rbthdr_log.rs  rbthdr_loupe.rs  rbthdr_ostend.rs  rbthdr_perambulation.rs  rbthdr_repo.rs  rbthdr_rig.rs  rbthdr_run.rs  rbthdt_cachet.rs  rbthdt_loupe.rs  rbthdt_perambulation.rs
Tools/vok/: Cargo.toml  README.md  VOS-VoxObscuraSpec.adoc  build.rs  claude-vok-context.md  voa_arcanum.sh  vob_build.sh  vob_cli.sh  vof_features.sh  vol_ledger.json  vop_prepare_release.sh  vow_workbench.sh  voz_zipper.sh
Tools/vok/lenses/: RCG-RustCodingGuide.md
Tools/vok/release/darwin-arm64/: vvr
Tools/vok/src/: vorc_commit.rs  vorc_core.rs  vorg_guard.rs  vorm_main.rs
Tools/vok/vof/: Cargo.toml
Tools/vok/vof/src/: lib.rs  vofc_registry.rs  vofe_emplace.rs  voff_freshen.rs  vofm_managed.rs  vofr_release.rs
Tools/vok/vom/: Cargo.toml  vome_cli.sh  vome_engine.sh
Tools/vok/vom/src/: lib.rs  main.rs  vomr_matricula.rs  vomra_allowlist.rs  vomrb_builder.rs  vomrl_log.rs  vomrm_matricula.rs  vomrp_presentment.rs  vomrq_validate.rs  vomrs_signet.rs  vomrv_vesture.rs  vomt_matricula.rs  vomta_allowlist.rs  vomtb_builder.rs  vomtm_matricula.rs  vomtq_validate.rs  vomts_signet.rs  vomtv_vesture.rs
Tools/vok/vov_veiled/: RCG-RustCodingGuide.md  VLS-VoxLiturgicalSpec.adoc  VMS-VoxMatriculaSpec.adoc  VOS-VoxObscuraSpec.adoc  VOS0-VoxObscuraSpec.adoc  VOSMM-entity.adoc  VOSO-distribution.adoc  VOSRC-commit.adoc  VOSRG-guard.adoc  VOSRI-init.adoc  VOSRL-lock.adoc  VOSRP-probe.adoc  VOSVK-variants.adoc  VOSYD-diptych.adoc  vovr_registry.json
Tools/vvc/: Cargo.toml
Tools/vvc/src/: lib.rs  vvcc_commit.rs  vvcc_format.rs  vvce_env.rs  vvcg_guard.rs  vvcm_machine.rs  vvco_output.rs  vvcp_probe.rs  vvtf_format.rs  vvtg_guard.rs
(+7795 files in other folders)
