[package]
name = "smpt"
version = "0.0.1"
edition = "2021"
description = "Study: Model Prompt Tuning - discover minimal effective prompts per model"

[[bin]]
name = "smpt"
path = "src/main.rs"

[dependencies]
vvc = { path = "../../Tools/vvc" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time"] }
serde_json = "1"
