[package]
name = "vvr"
version = "0.0.1"
edition = "2021"
description = "Voce Viva Rust - Platform utilities for Claude Code kits"
build = "build.rs"

[[bin]]
name = "vvr"
path = "src/vorm_main.rs"

[features]
default = []
# Kit features are auto-detected by build.rs
jjk = []

[dependencies]
clap = { version = "4", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
vof = { path = "vof" }
vvc = { path = "../vvc" }

# Kit dependencies - jjk is compiled when available
jjk = { path = "../jjk/vov_veiled" }
