[package]
name = "vvc"
version = "0.0.1"
edition = "2021"
description = "Voce Viva Core - Shared commit infrastructure for VOK kits"

[lib]
name = "vvc"
path = "src/lib.rs"

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
regex = "1"
tokio = { version = "1", features = ["rt-multi-thread", "process", "macros", "fs"] }
serde_json = "1"
