[package]
name = "apcd"
version = "0.1.0"
edition = "2021"
description = "Ann's PHI Clipbuddy — clipboard PHI detection for Epic EHR"
default-run = "apcap"

[lib]
name = "apcd"
path = "src/lib.rs"

[[bin]]
name = "apcap"
path = "src/apcap_main.rs"

[[bin]]
name = "apcal"
path = "src/apcal_main.rs"

[[bin]]
name = "apcad"
path = "src/apcad_main.rs"

[[bin]]
name = "apcab"
path = "src/apcab_main.rs"

[[bin]]
name = "apcnsa"
path = "src/apcnsa_main.rs"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3"
scraper = "0.21"
aho-corasick = "1"
regex = "1"
unicode-segmentation = "1"
chrono = "0.4"
notify = "6"
csv = "1"
zip = "2"
ureq = "2"
ort = { version = "2.0.0-rc.10", features = ["download-binaries"] }
tokenizers = "0.15"

# macOS NSPasteboard FFI — apcrb_pasteboard enumerates declared UTIs.
# Versions pinned to whatever Tauri already pulls transitively so there is
# no second resolution of the objc2 tree.
[target.'cfg(target_os = "macos")'.dependencies]
objc2             = "0.6.4"
objc2-foundation  = "0.3.2"
objc2-app-kit     = { version = "0.3.2", features = ["NSPasteboard", "NSPasteboardItem"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
